# Qt

./: CMakeLists.txt  ToDoList.qml  main.cpp  main.qml  todo-list.pro  todolist.cpp  todolist.h  todomodel.cpp  todomodel.h
